--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Validation</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
-    <form>
+    <form novalidate>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email"><br>
+        <span id="email-error"></span>
+
         <label for="country">Country:</label>
         <select class="form-select" autocomplete="country" id="country" name="country">
             <option>Select Country</option>
@@ -272,6 +275,7 @@
         <input type="text" id="password" name="password"><br>
         <label for="confirm-pass">Confirm Password:</label>
         <input type="text" id="confirm-pass" name="confirm-pass"><br>
+        <button>Submit</button>
     </form>
     
 </body>
