rewrite code, factory function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <form novalidate>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email"><br>
-        <span id="email-error"></span>
+        <span id="email-error"></span><br>
 
         <label for="country">Country:</label>
         <select class="form-select" autocomplete="country" id="country" name="country">
@@ -269,6 +269,8 @@
             <option value="ZM">Zambia</option>
             <option value="ZW">Zimbabwe</option>
         </select><br>
+        <span id="country-error"></span><br>
+
         <label for="postal">Postal Code:</label>
         <input type="text" id="postal" name="postal"><br>
         <label for="password">Password:</label>
