--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@
 
         <label for="postal">Postal Code:</label>
         <input type="text" id="postal" name="postal"><br>
+        <span id="postal-error"></span><br>
+
         <label for="password">Password:</label>
         <input type="text" id="password" name="password"><br>
         <label for="confirm-pass">Confirm Password:</label>
