--- a/index.html
+++ b/index.html
@@ -277,8 +277,13 @@
 
         <label for="password">Password:</label>
         <input type="text" id="password" name="password"><br>
-        <label for="confirm-pass">Confirm Password:</label>
-        <input type="text" id="confirm-pass" name="confirm-pass"><br>
+        <span id="password-error"></span><br>
+
+
+        <label for="confirm-password">Confirm Password:</label>
+        <input type="text" id="confirm-password" name="confirm-password"><br>
+        <span id="confirm-password-error"></span><br>
+
         <button>Submit</button>
     </form>
     
